router/etc/iptables/rules.v4
# Generated by iptables-save v1.8.4 on Mon May 16 09:01:29 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A FORWARD -d 10.0.0.0/8 -o eth0 -j DROP
-A FORWARD -d 172.16.0.0/12 -o eth0 -j DROP
-A FORWARD -d 192.168.0.0/16 -o eth0 -j DROP
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -d 172.16.14.123/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 172.16.14.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.2/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.10/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.10/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.14.20/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -d 172.16.14.20/32 -p tcp -m tcp --dport 110 -j ACCEPT
-A FORWARD -d 172.16.14.20/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A FORWARD -d 172.16.14.20/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A FORWARD -d 172.16.14.20/32 -p tcp -m tcp --dport 995 -j ACCEPT
COMMIT
# Completed on Mon May 16 09:01:29 2022
# Generated by iptables-save v1.8.4 on Mon May 16 09:01:29 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 172.16.14.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon May 16 09:01:29 2022
# Generated by iptables-save v1.8.4 on Mon May 16 09:01:29 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon May 16 09:01:29 2022
